chore: Add test on engine